--- a/src/sass/Card.scss
+++ b/src/sass/Card.scss
@@ -48,3 +48,11 @@
     box-shadow: 0 0 20px 0 $neon-green;
   }
 }
+
+@media screen and (min-width: 320px) {
+  .card {
+    .advice {
+      font-size: 1.2rem;
+    }
+  }
+}
